--- a/src/Container.razor
+++ b/src/Container.razor
@@ -1,5 +1,3 @@
-@using System.Collections.Generic
-@using Soenneker.Extensions.String
 @using Soenneker.Quark.Divs
 
 @inherits Soenneker.Quark.Components.Element
@@ -11,21 +9,10 @@
 @code {
     protected override Dictionary<string, object> BuildAttributes()
     {
-        Dictionary<string, object> attributes = base.BuildAttributes();
+        base.BuildAttributes();
         
-        // Ensure the container class is always included
-        var existingClass = attributes.GetValueOrDefault("class")?.ToString();
-        const string containerClass = "container";
-        
-        if (existingClass.IsNullOrEmpty())
-        {
-            attributes["class"] = containerClass;
-        }
-        else
-        {
-            attributes["class"] = $"{containerClass} {existingClass}";
-        }
-        
-        return attributes;
+        AppendToClassAttr(Attributes, "container");
+
+        return Attributes;
     }
 }
