--- a/src/Container.razor
+++ b/src/Container.razor
@@ -1,6 +1,6 @@
 @using Soenneker.Quark.Divs
 
-@inherits Soenneker.Quark.Components.Element
+@inherits Soenneker.Quark.Element
 
 <Div @attributes="BuildAttributes()">
 	@ChildContent
