--- a/src/Container.razor
+++ b/src/Container.razor
@@ -1,5 +1,3 @@
-@using Soenneker.Quark.Divs
-
 @inherits Soenneker.Quark.Element
 
 <Div @attributes="BuildAttributes()">
@@ -7,9 +5,11 @@
 </Div>
 
 @code {
+	public override string? Name { get; set; } = "Container";
+
     protected override Dictionary<string, object> BuildAttributes()
     {
-        base.BuildAttributes();
+        Attributes = base.BuildAttributes();
         
         AppendToClassAttr(Attributes, "container");
 
